gitops/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solidarytech
  labels:
    project: SolidaryTech
    environment: Production
    cost-center: NGO-Core
