gitops/apps/donation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: donation-service }
spec:
  replicas: 2
  selector: { matchLabels: { app: donation-service } }
  template:
    metadata: { labels: { app: donation-service, service: donation-service } }
    spec:
      securityContext: { runAsNonRoot: true, seccompProfile: { type: RuntimeDefault } }
      containers:
        - name: donation-service
          image: 713071293995.dkr.ecr.us-east-1.amazonaws.com/solidarytech/donation-service:sha-94b17e4
          ports:
            - { name: http, containerPort: 8082 }
          envFrom: [{ configMapRef: { name: solidarytech-config } }]
          readinessProbe: { httpGet: { path: /health/ready, port: http }, periodSeconds: 5 }
          livenessProbe: { httpGet: { path: /health/live, port: http }, initialDelaySeconds: 10, periodSeconds: 15 }
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { cpu: 500m, memory: 384Mi }
          securityContext: { allowPrivilegeEscalation: false, capabilities: { drop: [ALL] }, readOnlyRootFilesystem: true }
---
apiVersion: v1
kind: Service
metadata: { name: donation-service, labels: { app: donation-service } }
spec: { selector: { app: donation-service }, ports: [{ name: http, port: 80, targetPort: http }] }
