gitops/apps/ngo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: ngo-service }
spec:
  replicas: 2
  selector: { matchLabels: { app: ngo-service } }
  template:
    metadata: { labels: { app: ngo-service, service: ngo-service } }
    spec:
      securityContext: { runAsNonRoot: true, seccompProfile: { type: RuntimeDefault } }
      containers:
        - name: ngo-service
          image: 713071293995.dkr.ecr.us-east-1.amazonaws.com/solidarytech/ngo-service:sha-94b17e4
          ports: [{ name: http, containerPort: 8081 }]
          envFrom: [{ configMapRef: { name: solidarytech-config } }]
          readinessProbe: { httpGet: { path: /health/ready, port: http }, periodSeconds: 10 }
          livenessProbe: { httpGet: { path: /health/live, port: http }, initialDelaySeconds: 15, periodSeconds: 20 }
          resources:
            requests: { cpu: 50m, memory: 96Mi }
            limits: { cpu: 300m, memory: 256Mi }
          securityContext: { allowPrivilegeEscalation: false, capabilities: { drop: [ALL] }, readOnlyRootFilesystem: true }
---
apiVersion: v1
kind: Service
metadata: { name: ngo-service, labels: { app: ngo-service } }
spec: { selector: { app: ngo-service }, ports: [{ name: http, port: 80, targetPort: http }] }
