gitops/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidarytech
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - { path: /ngos, pathType: Prefix, backend: { service: { name: ngo-service, port: { number: 80 } } } }
          - { path: /donations, pathType: Prefix, backend: { service: { name: donation-service, port: { number: 80 } } } }
          - { path: /volunteers, pathType: Prefix, backend: { service: { name: volunteer-service, port: { number: 80 } } } }
